<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_history"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HistoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/header_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/header_title"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btnDelete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/header_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/header_subtitle"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/btnDelete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_title" />

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/delete_bg"
            android:contentDescription="@string/cd_delete_button"
            android:src="@drawable/delete_icon"
            app:layout_constraintDimensionRatio="W,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHistoryScanCancer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_subtitle"
            tools:listitem="@layout/history_card" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>